--- a/css/face.css
+++ b/css/face.css
@@ -13,62 +13,62 @@ body {
     justify-content: center;
 }
 .widget {
-  background: #E9EBEE;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  max-width: 100%;
-  overflow: hidden
+    background: #E9EBEE;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow: hidden
 }
 .ii {
-  width: 828px;
-  max-width: 100%;
-  height: auto;
+    width: 828px;
+    max-width: 100%;
+    height: auto;
 }
 .cccf {
-  width: 200px;
+    width: 200px;
 }
 .backgroundDiv {
-  width: 100%;
-  height: 100px;
-  background: red;
-  background-position: center;
-  background-size: cover
+    width: 100%;
+    height: 100px;
+    background: red;
+    background-position: center;
+    background-size: cover
 }
 .cropcapa {
-  clip: rect(0px, 828px, 315px, 0px);
-  position: absolute;
+    clip: rect(0px, 828px, 315px, 0px);
+    position: absolute;
 }
 .um {
-  font-weight: 900;
-  font-size: 22px;
+    font-weight: 900;
+    font-size: 22px;
 }
 .coment-post1 {
-  width: 100%;
-  margin-top: 10px;
+    width: 100%;
+    margin-top: 10px;
 }
 .ta {
-  overflow-x:visible;
+    overflow-x: visible;
 }
 .coment1 {
-  width: 100%;
-  background: green
+    width: 100%;
+    background: green
 }
 .16 {
-  font-size: 16
+    font-size: 16
 }
 .bold {
-  font-weight: 900;
+    font-weight: 900;
 }
 .cazul {
-  color: #2657eb
+    color: #2657eb
 }
 .edit {
-  border:none;
-  background: transparent;
-  width: 100%;
-  max-width: 100%;
-  opacity: 0.7
+    border: none;
+    background: transparent;
+    width: 100%;
+    max-width: 100%;
+    opacity: 0.7
 }
 .top {
     width: 100%;
@@ -96,8 +96,8 @@ input:focus {
     margin-left: 10px;
 }
 .pad {
-  padding-top: 5px;
-  background: #fff
+    padding-top: 5px;
+    background: #fff
 }
 .po {
     border-radius: 2px;
@@ -107,11 +107,11 @@ input:focus {
     display: flex
 }
 .pes {
-  width: 10%;
-  float: right;
+    width: 10%;
+    float: right;
 }
 .ppe {
-  width: 90%;
+    width: 90%;
 }
 .pes img {
     padding-top: 10 px;
@@ -145,8 +145,8 @@ input:focus {
     left: -10px;
 }
 .appl {
-  width: 100%;
-  height: 25px;
+    width: 100%;
+    height: 25px;
 }
 .lgg {
     display: inline-block;
@@ -170,25 +170,25 @@ input:focus {
     margin: 0 auto;
 }
 .xat-teste {
-  right: 0;
-  top: 0;
-  height: 200px;
-  background: purple;
-  width: 100px;
+    right: 0;
+    top: 0;
+    height: 200px;
+    background: purple;
+    width: 100px;
 }
 .sizemnu {
     display: flex
 }
 .xat {
-  flex-grow: 5;
-  max-width: 220px;
-  background: red;
-  height: 100px;
-  float: right;
+    flex-grow: 5;
+    max-width: 220px;
+    background: red;
+    height: 100px;
+    float: right;
 }
 .xxat {
-  background: green;
-  height: 200px;
+    background: green;
+    height: 200px;
 }
 .content-menu {
     width: 100%;
@@ -276,27 +276,24 @@ input:focus {
     font-size: 14px;
     opacity: 0.9
 }
-
 .main {
-  display: none
+    display: none
 }
 .criar:hover {
-  background: #3C8A2D!important
+    background: #3C8A2D!important
 }
 @keyframes cria {
-  0% {
-    background:#36a420;
-  }
-  100% {
-    background:#2657eb;
-  }
+    0% {
+        background: #36a420;
+    }
+    100% {
+        background: #2657eb;
+    }
 }
-
 .btnn span {
-  font-size: 12px;
-  opacity: 0.7
+    font-size: 12px;
+    opacity: 0.7
 }
-
 .content-flex {
     width: 100%;
     margin: 0 auto;
@@ -306,7 +303,7 @@ input:focus {
     flex-basis: 300px;
 }
 .flgg {
-  width: 100%;
+    width: 100%;
 }
 .content-left {
     float: right;
@@ -318,10 +315,10 @@ input:focus {
     float: left;
 }
 .pow {
-  width: 200px;
-  max-width: 100%;
-  background: green;
-  height: 50px;
+    width: 200px;
+    max-width: 100%;
+    background: green;
+    height: 50px;
 }
 .foto-perfil {
     background: #2657eb;
@@ -348,19 +345,18 @@ input:focus {
     height: 50px;
 }
 .fFotoPerfil {
-  width: 170px;
-  height: 170px;
-  margin: 0 auto;
-  z-index: 999
+    width: 170px;
+    height: 170px;
+    margin: 0 auto;
+    z-index: 999
 }
 .fFotoCapa {
-  width: 815px;
-  max-width: 100%;
-  height: 312px;
-  z-index: 99;
-  border: none
+    width: 815px;
+    max-width: 100%;
+    height: 312px;
+    z-index: 99;
+    border: none
 }
-
 .oito {
     width: 100%;
 }
@@ -371,10 +367,9 @@ input:focus {
     overflow: hidden;
     cursor: pointer;
 }
-
 .thumb-image {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
 .cem {
     width: 100%;
@@ -393,7 +388,6 @@ input:focus {
     position: relative;
     height: 40px;
 }
-
 .info {
     background: #fff;
     box-shadow: 0px 1px 1px 0px #d0d1d5;
@@ -407,12 +401,11 @@ input:focus {
     margin-top: 10px;
 }
 .dados-pagina2 {
-    flex:1
-    margin-top: 10px;
+    flex: 1 margin-top: 10px;
     margin-left: 10px
 }
 .ffv {
-  background: red;
+    background: red;
 }
 .dados-pagina h1 {
     opacity: 0.8;
@@ -499,7 +492,6 @@ input:focus {
 }
 .idd {
     padding-top: 10px;
-
 }
 .fix {
     width: 95%;
@@ -509,9 +501,7 @@ input:focus {
     padding-top: 10px;
     margin-top: 10px;
 }
-.buttons {
-}
-.buttons ul {
+.buttons {} .buttons ul {
     list-style: none;
 }
 .buttons ul li {
@@ -521,17 +511,17 @@ input:focus {
     color: #4267B2
 }
 .buttonsr {
-  padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 .buttonsr ul {
     list-style: none;
     text-align: right;
 }
 .eaw {
-  order:2
+    order: 2
 }
 .ewa {
-  order:1
+    order: 1
 }
 .buttonsr ul li {
     display: inline-block;
@@ -578,13 +568,13 @@ a {
     cursor: pointer;
 }
 .borda {
-  border:1px solid #ccc;
+    border: 1px solid #ccc;
 }
 .pcca {
     width: 49px;
     height: 49px;
     background: #2657eb;
-    border:1px solid #ccc;
+    border: 1px solid #ccc;
 }
 .pccc {
     padding-top: 10px;
@@ -641,7 +631,7 @@ a {
     height: 100px;
 }
 .picc {
-    width:88px;
+    width: 88px;
     margin: 0 auto;
     height: 88px;
     background: #2657eb;
@@ -810,7 +800,7 @@ button:hover {
     width: 100%
 }
 .rodape {
-    background: linear-gradient(to left, #de6161 , #2657eb);
+    background: linear-gradient(to left, #de6161, #2657eb);
     color: #fff;
     width: 100%;
     padding-top: 20px;
@@ -819,7 +809,7 @@ button:hover {
     font-size: 14px;
 }
 .rodape a {
-  color: #fff;
+    color: #fff;
 }
 .foto-perfil-p {
     width: 40px;
@@ -827,10 +817,7 @@ button:hover {
     background: #2657eb;
     cursor: pointer;
 }
-.destaquer {
-
-}
-.curt {
+.destaquer {} .curt {
     margin-left: 10px;
     font-size: 12px;
 }
@@ -854,28 +841,28 @@ button:hover {
     flex-grow: 10;
 }
 .inpuu {
-  position: absolute;
+    position: absolute;
 }
 .aaa {
-  display: none;
+    display: none;
 }
 img {
-  border: none;
+    border: none;
 }
 .pho {
-  margin-left: 5px;
-  margin-top: 5px;
-  opacity: 0.5;
-  cursor: pointer;
-  transition:2s;
+    margin-left: 5px;
+    margin-top: 5px;
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 2s;
 }
 .pho:hover {
-  opacity: 0.9;
+    opacity: 0.9;
 }
 .respp {
-  display: none;
-  width: 100%;
-  margin-bottom: 10px;
+    display: none;
+    width: 100%;
+    margin-bottom: 10px;
 }
 .desta2 {
     border: 1px solid #ced0d4;
@@ -889,96 +876,93 @@ img {
     width: 100px;
 }
 .oaa {
-  display: none
+    display: none
 }
 .oaaa {
-  display: block
+    display: block
 }
 .hk {
-  padding-top: 5px;
+    padding-top: 5px;
 }
 @media only screen and (max-width: 983px) {
     .fl {
         display: none
     }
     .buttons {
-     text-align: center;
-      margin: 0 auto;
-      margin-bottom: 10px
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 10px
     }
     .buttonsr {
-      text-align: center;
-      margin: 0 auto
+        text-align: center;
+        margin: 0 auto
     }
     .buttonsr ul {
         text-align: center;
     }
     .eaw {
-      order:1
+        order: 1
     }
     .ewa {
-      order:2
+        order: 2
     }
     .respp {
-      display: flex;
-      width: 100%;
-      min-width: 500px;
+        display: flex;
+        width: 100%;
+        min-width: 500px;
     }
     .oaaa {
-      display: none
+        display: none
     }
     .oaa {
-      display: block
+        display: block
     }
-
 }
-
 @media only screen and (max-width: 500px) {
-  .oaaal {
-    display: none
-  }
-  .buttonsr ul {
-      text-align: left;
-  }
-  .itemdd {
-    width:100%
-  }
-  .thumb-image {
-    width: 100%;
-    height: 255px;
-  }
-  .buttons {
-    margin-left: 10px;
-    text-align: left;
-    margin: 0 auto;
-    margin-bottom: 10px
-  }
-  .content-l {
-    width: 100%;
-    margin: 0 auto
-  }
-  .fdg {
-    display: none
-  }
-  .um {
-    font-weight: 900;
-    font-size: 14px;
-  }
-  .ii {
-    width: 100%;
-    height: 475px;
-  }
-  .cropcapa {
-    clip: none;
-    position:inherit;
-    min-width: 100%;
-  }
-  .capa {
-      height: 255px;
-      width: 100%;
-  }
-  .edit {
-    font-size: 12px;
-  }
-
+    .oaaal {
+        display: none
+    }
+    .buttonsr ul {
+        text-align: left;
+    }
+    .itemdd {
+        width: 100%
+    }
+    .thumb-image {
+        width: 100%;
+        height: 255px;
+    }
+    .buttons {
+        margin-left: 10px;
+        text-align: left;
+        margin: 0 auto;
+        margin-bottom: 10px
+    }
+    .content-l {
+        width: 100%;
+        margin: 0 auto
+    }
+    .fdg {
+        display: none
+    }
+    .um {
+        font-weight: 900;
+        font-size: 14px;
+    }
+    .ii {
+        width: 100%;
+        height: 475px;
+    }
+    .cropcapa {
+        clip: none;
+        position: inherit;
+        min-width: 100%;
+    }
+    .capa {
+        height: 255px;
+        width: 100%;
+    }
+    .edit {
+        font-size: 12px;
+    }
 }
